--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <title>Chat Room</title>
     <link rel="stylesheet" href="css/main.css">
     </link>
