--- a/public/index.html
+++ b/public/index.html
@@ -3,24 +3,32 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Chat Room</title>
+    <title>Бу Чат</title>
     <link rel="stylesheet" href="css/main.css">
     </link>
 </head>
 
 <body>
     <div id="header">
-        <h1>Chat Room</h1>
+        <h1>Бу Чат</h1>
+		<small>
+			СПАМ-КИК
+			ПОРНУХА-КИК
+			РЕКЛАМА-КИК
+			РАДИКАЛЬНАЯ ПОЛИТИКА- КИК
+
+			РАЗБАНА НЕ СУЩЕСТВУЕТ
+		</small>
     </div>
     <div id="body">
         <script src="js/main.js"></script>
         <div id="chatArea">
         </div>
         <div id="inputArea">
-            <textarea id="inputArea__name" maxlength="40" spellcheck="false" onkeydown="inputAreaNameKeyPressed();">Guest</textarea>
+            <textarea id="inputArea__name" maxlength="40" spellcheck="false" onkeydown="inputAreaNameKeyPressed();">Гость</textarea>
             <textarea id="inputArea__message" maxlength="400" spellcheck="false" onkeypress="inputAreaMessageKeyPressed();"></textarea>
             <button id="inputArea__sendButton">
-                Send
+                Отправить
             </button>
         </div>
     </div>
