--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,16 @@
     <title>Бу Чат</title>
     <link rel="stylesheet" href="css/main.css">
     </link>
+    <script>
+    function rules() {
+        alert("СПАМ-БАН\n18+ ТЕМЫ-БАН\nРЕКЛАМА-БАН\nРАДИКАЛЬНАЯ ПОЛИТИКА- БАН");
+    }
+   </script>
 </head>
 
 <body>
     <div id="header">
-        <h1>Бу Чат</h1>
+        <h1>Бу Чат <a href="javascript:rules();">Правила</a></h1>
     </div>
     <div id="body">
         <script src="js/main.js"></script>
